--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-feedparser==5.2.1
-Markdown==2.6.8
-pelican==3.7.1
+feedparser>=5.2.1
+#Markdown>=3.3.4
+Markdown>=2.6.11
+pelican>=3.7.1
 genhtml-markdown>=1.0.8
